# imrefl

./: .gitignore  CMakeLists.txt  README.md  compile.sh  default.nix  example.cpp  flake.nix  imrefl.cpp  imrefl.hpp  imrefl_glm.hpp  main.cpp  normal_clang_compile.sh  reflection_clang_compile.sh  test.cpp
example/: CMakeLists.txt  example.cpp
